# douke_genome

./: .gitignore  LEGUMEGENOMEFM_RESEARCH_DESIGN.md  MODEL_ARCHITECTURE.md  PLAN.md  PROGRESS.md  README.md  TRAINING_PLAN.md  TRAINING_PROGRESS.md  pyproject.toml
configs/: data_audit.yaml  data_freeze.yaml  data_refinement.yaml  evaluation_matrix.yaml  pretrain_h20_candidate.yaml  pretrain_stage1.yaml  pretrain_stage2.yaml  pretrain_stage3.yaml  validation_2080.yaml  validation_2080_ddp.yaml
data_manifests/: annotation_candidates.summary.json  annotation_candidates.tsv  annotation_qc.summary.json  annotation_qc.tsv  archive_annotation_candidates.summary.json  archive_annotation_candidates.tsv  archive_annotation_qc.summary.json  archive_annotation_qc.tsv  archive_genome_candidates.summary.json  archive_genome_candidates.tsv  archive_genome_qc.summary.json  archive_genome_qc.tsv  archive_members.tsv  archive_qc.summary.json  archive_qc.tsv  assembly_candidates.summary.json  assembly_candidates.tsv  assembly_metadata.summary.json  assembly_metadata.tsv  busco_lineage_eudicots_odb10.READY  busco_lineage_eudicots_odb10.receipt.json  contamination_legacy_binding.READY  contamination_legacy_binding.receipt.json  contamination_references.READY  contamination_references.receipt.json  core_literature_verified.summary.json  core_literature_verified.tsv  data_refinement_annotation_closure.summary.json  data_refinement_annotation_closure.tsv  data_refinement_busco.summary.json  data_refinement_busco.tsv  data_refinement_busco_tasks.summary.json  data_refinement_busco_tasks.tsv  (+34 more)
(+169 files in other folders)
