[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legumegenomefm"
version = "0.1.0"
description = "Evidence-grounded legume genome foundation model"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2",
  "pyyaml>=6,<7",
  "sourmash==4.8.14",
  "torch>=2.5,<2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
